--- a/src/Components/Playlist/Playlist.css
+++ b/src/Components/Playlist/Playlist.css
@@ -4,7 +4,8 @@
     align-items: center;
     overflow-y: scroll;
     width: 37%;
-    max-height: 950px;
+    min-width: 300px;
+    max-height: 750px;
     margin-left: 2em;
     padding: .88rem;
     background-color: rgba(1, 12, 63, 0.918);
