--- a/src/Components/SearchResults/SearchResults.css
+++ b/src/Components/SearchResults/SearchResults.css
@@ -1,6 +1,7 @@
 .SearchResults {
     width: 50%;
-    height: 950px;
+    min-width: 300px;
+    height: 750px;
     overflow-y: scroll;
     padding: .88rem;
     background-color: rgba(1, 12, 63, 0.918);
@@ -14,6 +15,7 @@
   
   @media only screen and (max-width: 1020px) {
     .SearchResults {
+      height: 450px;
       width: 90%;
       margin-bottom: 2rem;
     }
